// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshot: Default 1`] = `
<div
  data-swarm-select="default"
>
  <div
    data-swarm-select-wrapper={true}
  >
    <select
      id="select"
      name="select"
      required={false}
    >
      <option
        value="geoffrey"
      >
        Geoffrey
      </option>
      <option
        value="drhorse"
      >
        Doctor Horse, MD Junior
      </option>
      <option
        value="chompyhorse"
      >
        Mister Chompy
      </option>
    </select>
    <span
      data-swarm-select-arrow="arrow-down"
    >
      <ArrowDown />
    </span>
  </div>
</div>
`;

exports[`Button Snapshot: Disabled 1`] = `
<div
  data-swarm-select="disabled"
>
  <div
    data-swarm-select-wrapper={true}
  >
    <select
      disabled={true}
      id="select"
      name="select"
      required={false}
    >
      <option
        value="geoffrey"
      >
        Geoffrey
      </option>
      <option
        value="drhorse"
      >
        Doctor Horse, MD Junior
      </option>
      <option
        value="chompyhorse"
      >
        Mister Chompy
      </option>
    </select>
    <span
      data-swarm-select-arrow="arrow-down"
    >
      <ArrowDown />
    </span>
  </div>
</div>
`;

exports[`Button Snapshot: Error 1`] = `
<div
  data-swarm-select="error"
>
  <div
    data-swarm-select-wrapper={true}
  >
    <select
      id="select"
      name="select"
      required={false}
    >
      <option
        value="geoffrey"
      >
        Geoffrey
      </option>
      <option
        value="drhorse"
      >
        Doctor Horse, MD Junior
      </option>
      <option
        value="chompyhorse"
      >
        Mister Chompy
      </option>
    </select>
    <span
      data-swarm-select-arrow="arrow-down"
    >
      <ArrowDown />
    </span>
  </div>
</div>
`;

exports[`Button Snapshot: Required Text 1`] = `
<div
  data-swarm-select="default"
>
  <div
    data-swarm-select-wrapper={true}
  >
    <select
      id="select"
      name="select"
      requireText="Must fill!"
      required={false}
    >
      <option
        value="geoffrey"
      >
        Geoffrey
      </option>
      <option
        value="drhorse"
      >
        Doctor Horse, MD Junior
      </option>
      <option
        value="chompyhorse"
      >
        Mister Chompy
      </option>
    </select>
    <span
      data-swarm-select-arrow="arrow-down"
    >
      <ArrowDown />
    </span>
  </div>
</div>
`;

exports[`Button Snapshot: With Id 1`] = `
<div
  data-swarm-select="default"
>
  <div
    data-swarm-select-wrapper={true}
  >
    <select
      id="select"
      name="select"
      required={false}
    >
      <option
        value="geoffrey"
      >
        Geoffrey
      </option>
      <option
        value="drhorse"
      >
        Doctor Horse, MD Junior
      </option>
      <option
        value="chompyhorse"
      >
        Mister Chompy
      </option>
    </select>
    <span
      data-swarm-select-arrow="arrow-down"
    >
      <ArrowDown />
    </span>
  </div>
</div>
`;
